Import of STBEY/Config-Manager-1.1 from CPAN.
gitpan-cpan-distribution: Config-Manager
gitpan-cpan-version:      1.1
gitpan-cpan-path:         STBEY/Config-Manager-1.1.tar.gz
gitpan-cpan-author:       STBEY
gitpan-cpan-maturity:     released

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,5 @@
                    =========================================
-                     Package "Config::Manager" Version 1.0
+                     Package "Config::Manager" Version 1.1
                    =========================================
 
 
@@ -9,6 +9,13 @@
 
 Version history:
 ----------------
+
+Version 1.1   14.02.2003
+
+ +  Added more documentation
+ +  Added missing license files
+ +  Added working example configuration files
+ +  Added another test file
 
 Version 1.0   05.02.2003
 
