--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,5 +1,5 @@
                    =========================================
-                     Package "Config::Manager" Version 1.0
+                     Package "Config::Manager" Version 1.1
                    =========================================
 
 
@@ -19,7 +19,8 @@ Contents:
 Prerequisites:
 --------------
 
-Perl version 5.000 or higher.
+Perl version 5.000 or higher, modules IO::File, File::Compare,
+File::Copy, Net::SMTP and MD5.
 
 
 Preliminary steps for use with Perl prior to version 5.002:
@@ -29,11 +30,11 @@ Edit the file "Makefile.PL" and change the line
 
     'VERSION_FROM'      => 'Manager.pm',
 to
-    'VERSION'           => '1.0',
+    'VERSION'           => '1.1',
 
 Also edit the file "t/00____version.t" and change the line
 
-    use Config::Manager 1.0;
+    use Config::Manager 1.1;
 to
     use Config::Manager;
 
@@ -71,7 +72,7 @@ Detailed installation guide:
 ----------------------------
 
  1) Change directory to the directory that has been created by unpacking this
-    package ("cd Config-Manager-1.0").
+    package ("cd Config-Manager-1.1").
 
  2) Type "perl Makefile.PL" (or whatever the name and path of your Perl 5
     binary is).
