--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,5 @@
                    =========================================
-                     Package "Config::Manager" Version 1.2
+                     Package "Config::Manager" Version 1.3
                    =========================================
 
 
@@ -9,6 +9,14 @@
 
 Version history:
 ----------------
+
+Version 1.3   01.05.2003
+
+ +  Replaced MD5 with Digest::MD5
+ +  Made some cosmetic changes to error messages
+    in Config::Manager::Conf
+ +  Changed the test suite accordingly
+ +  Fixed the broken images from version 1.2
 
 Version 1.2   26.04.2003
 
