Import of STBEY/Config-Manager-1.6 from CPAN.
gitpan-cpan-distribution: Config-Manager
gitpan-cpan-version:      1.6
gitpan-cpan-path:         STBEY/Config-Manager-1.6.tar.gz
gitpan-cpan-author:       STBEY
gitpan-cpan-maturity:     released

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,5 @@
                    =========================================
-                     Package "Config::Manager" Version 1.5
+                     Package "Config::Manager" Version 1.6
                    =========================================
 
 
@@ -9,6 +9,46 @@
 
 Version history:
 ----------------
+
+Version 1.6   28.06.2003
+
+ Config::Manager::Report:
+
+ +  The name and path of the default logfile can now be influenced
+    (the "singleton()" class method now passes arguments to "new()")
+ +  Changed the default path and filename of logfile objects
+    (now uses the user login to discriminate further)
+ +  Adapted the test suite accordingly
+ +  Functions "Normalize()" and "MakeDir()" are now physically
+    located in Config::Manager::Report
+ +  The constructor now automatically creates the logfile's path
+    (with "MakeDir()") if necessary
+ +  Added new import targets ":aux" and ":ALL" (":aux" contains
+    "Normalize" and "MakeDir", ":ALL" contains ":all" and ":aux")
+
+ Config::Manager::File:
+
+ +  Functions "Normalize()" and "MakeDir()" are now imported from
+    Config::Manager::Report and re-exported
+ +  Function "Normalize()" now also supports relative paths
+
+ Config::Manager::Conf:
+
+ +  Added the method "get_files()" to get the list of configuration
+    files which led to the current configuration object, in the
+    order they were read in
+ +  Changed the method "get_all()", it now returns a list of
+    anonymous arrays containing a flag, the name, the value, the
+    source file and line number of each configuration constant
+ +  Adapted the test suite accordingly
+
+ scripts:
+
+ +  Added the script "showchain.pl" to show the chain of
+    configuration files which are read in for a given
+    scope and user
+ +  Changed the script "showconf.pl" to also show the file
+    of origin and line number of each configuration constant
 
 Version 1.5   09.06.2003
 
